image overlap fix

--- a/web/src/components/pages/about/about.css
+++ b/web/src/components/pages/about/about.css
@@ -1,15 +1,5 @@
 @import url('../../vars.css');
 
-.record-quality-content {
-    display: grid;
-    grid-template-columns: 49% 48%;
-    grid-template-rows: auto;
-    grid-column-gap: 3%;
-
-    img {
-        justify-self: end;
-    }
-}
 
 .about {
     & #content {
